  * fix segfault on exit for w32codecs
  * fix yuy2 on xshm bug (affects w32codecs and msvc)
  * reimplemented x/y zoom
  * Wing Commander III MVE movie file demuxer
  * Creative Voice (VOC) file demuxer
  * Westwood Studios VQA file demuxer
  * AIFF file demuxer
  * Sun/NeXT SND/AU file demuxer
  * YUV4MPEG2 file demuxer
  * RealMedia & RealAudio file demuxers
  * Id CIN video decoder
  * QT RLE video decoder
  * QT SMC video decoder
  * QT RPZA video decoder
  * Wing Commander III video decoder
  * Logarithmic PCM (mu-law & A-law) audio decoder
  * GSM 6.10 audio decoder
  * time-based seeking in ogg-streams
  * improved support for ogg-streams containing video (so-called ogm streams)
  * spu encoding for full overlay support with dxr3
  * icecast/shoutcast support
  * dvd raw device support
  * decode id3v1 tags in mp3 files 
  * updated internal liba52 to version 0.7.4
  * numeric selection of dvd menu buttons (could make some dvd easter eggs accesible)
  * big api cleanup
  * xine engine can open more than one stream at a time
  * audio compressor filter
  * content detection fixes (e.g. mpeg program streams)
  * much improved plugin loader, makes it possible to have several
    versions of libxine installed in parallel
  * file:// mrl use an uri-like syntax now, %xx-encoded chars are handled,
    '?' is used to separate subtitle files
  * incorporated pgx64[fb] plugin
  * improved support for invalid mpeg streams
  * some metronom changes hopefully improving some last glitches in dvd playback
  * URI conforming MRL syntax, new delimiter # for various stream parameters
  * variuos fixes for dxr3 overlay mode
	
xine-lib (0.9.13) unstable; urgency=low

  * improved audio resampling for cards limited to 16 bits, stereo or mono
  * native wmv7 decoder using ffmpeg
  * enable ffmpeg's native msmpeg4 v1/v2 decoder
  * correct highlight placement for anamorphic and pan&scan menus with DXR3
  * half-way support for widescreen tv sets with DXR3
  * WAV file demuxer