@@ -1191,6 +1191,7 @@ echo "   - wc3 mve       - voc"
 echo "   - vqa           - aiff"
 echo "   - cda           - snd/au"
 echo "   - yuv4mpeg2     - real/realaudio"
+echo "   - ea wve"
 if test x"$enable_asf" = "xyes"; then
   echo "   - asf"
 fi
