@@ -55,7 +55,8 @@ lib_LTLIBRARIES = $(ogg_module) $(asf_module) xineplug_dmx_avi.la\
 	xineplug_dmx_snd.la \
 	xineplug_dmx_yuv4mpeg2.la \
 	xineplug_dmx_real.la \
-	xineplug_dmx_realaudio.la 
+	xineplug_dmx_realaudio.la \
+	xineplug_dmx_eawve.la
 
 xineplug_dmx_ogg_la_SOURCES = demux_ogg.c
 xineplug_dmx_ogg_la_LIBADD = $(OGG_LIBS) $(VORBIS_LIBS)\
@@ -157,6 +158,10 @@ xineplug_dmx_real_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
 xineplug_dmx_realaudio_la_SOURCES = demux_realaudio.c
 xineplug_dmx_realaudio_la_LIBADD = $(top_builddir)/src/xine-engine/libxine.la
 xineplug_dmx_realaudio_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
+
+xineplug_dmx_eawve_la_SOURCES = demux_eawve.c
+xineplug_dmx_eawve_la_LIBADD = $(top_builddir)/src/xine-engine/libxine.la
+xineplug_dmx_eawve_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
 
 include_HEADERS = demux.h qtpalette.h
 
